--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@ ul{
 }
 nav ul li{
     display: inline-block;
-    margin-right: 1.5em;
-    line-height: 3em;
+    margin-right: 1.5rem;
+    line-height: 3rem;
 }
 nav a{
     text-decoration: none;
@@ -79,7 +79,7 @@ svg{
 .ruby{
     background-color: rgb(126, 9, 236);
 }
-.js{
+.jvas{
     background-color: rgb(5, 218, 118);
 }
 .responsive{
